[package]
name = "kibi-fuzz"
version = "0.0.0"
edition = "2018"
authors = ["Ilaï Deutel"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ilai-deutel/kibi"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
tempfile = "3.23.0"
env-test-util = "1.0.1"
kibi = { path = ".." }

[[bin]]
name = "fuzz_config_load"
path = "fuzz_targets/fuzz_config_load.rs"
test = false
doc = false
bench = false

[lints]
workspace = true
