[package]
name = "kibi-fuzz"
publish = false
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.12"
tempfile = "3.25.0"
env-test-util = "1.0.1"
kibi = { path = ".." }

[[bin]]
name = "fuzz_config_load"
path = "fuzz_targets/fuzz_config_load.rs"
test = false
doc = false
bench = false

[lints]
workspace = true
