[package]
name = "kibi-fuzz"
authors = ["Ilaï Deutel"]
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.12"
tempfile = "3.26.0"
env-test-util = "1.0.1"
kibi = { path = ".." }

[[bin]]
name = "fuzz_config_load"
path = "fuzz_targets/fuzz_config_load.rs"
test = false
doc = false
bench = false
