[package]
name = "xtask"
description = "Scripts to help with kibi's development."
readme = "README.md"
keywords = ["scripts"]
categories = ["development-tools"]
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
anstyle = "1.0.13"
clap = { version = "4.5.48", features = ["derive"] }
glob = "0.3.3"
# https://github.com/XAMPPRocky/tokei/pull/1289
tokei = {git = "https://github.com/ilai-deutel/tokei", branch = "cli-deps", default-features = false}

[lints]
workspace = true
