[package]
name = "xtask"
description = "Scripts to help with kibi's development."
readme = "README.md"
authors = ["Ilaï Deutel"]
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[dependencies]
# https://github.com/XAMPPRocky/tokei/pull/1289
tokei = { git = "https://github.com/ilai-deutel/tokei", branch = "cli-deps", default-features = false }
